[package]
name = "zone-server"
version = "0.1.0"
authors = ["黄炜杰 <wjhuang@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
actix-web = "3"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "mysql" ] }
